--- a/README
+++ b/README
@@ -8,32 +8,31 @@ reformatting, line sorting, completion, tag navigation, block
 commenting, extensive file format and character support, and much more. 
 
 Runtime requirements:
-  gvim-7.0.017-1
+  gvim-7.1.x
 
 Build requirements:
-  cygwin-1.5.21-2
-  bash-3.1-9
-  cygport-0.2.5-1
-  vim-7.0.122-1
+  cygwin-1.5.24-2
+  cygport-0.2.11-1
+  vim-7.1-1
 
 Canonical website:
   http://cream.sourceforge.net/
 
 Canonical download:
-  http://prdownloads.sourceforge.net/cream/
+  http://downloads.sourceforge.net/cream/
 
 -------------------------------------------
 
 Build instructions:
-  unpack cream-0.36-X-src.tar.bz2
+  unpack cream-0.38-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./cream-0.36-X.cygport all
+  cygport ./cream-0.38-X.cygport all
 
 This will create:
-  /usr/src/cream-0.36-X-src.tar.bz2
-  /usr/src/cream-0.36-X.tar.bz2
+  /usr/src/cream-0.38-X-src.tar.bz2
+  /usr/src/cream-0.38-X.tar.bz2
 
 -------------------------------------------
 
@@ -42,224 +41,227 @@ Files included in the binary package:
   /etc/postinstall/cream.sh
   /usr/bin/cream
   /usr/share/applications/cream.desktop
-  /usr/share/doc/Cygwin/cream-0.36.README
-  /usr/share/doc/cream-0.36/CHANGELOG.txt
-  /usr/share/doc/cream-0.36/COPYING.txt
-  /usr/share/doc/cream-0.36/DEVELOPER.txt
-  /usr/share/doc/cream-0.36/KEYBOARD.txt
-  /usr/share/doc/cream-0.36/PressRelease.txt
-  /usr/share/doc/cream-0.36/README.txt
-  /usr/share/doc/cream-0.36/RELEASE.txt
-  /usr/share/doc/cream-0.36/TODO.txt
-  /usr/share/doc/cream-0.36/WINDOWS.txt
+  /usr/share/doc/Cygwin/cream-0.38.README
+  /usr/share/doc/cream-0.38/CHANGELOG.txt
+  /usr/share/doc/cream-0.38/COPYING.txt
+  /usr/share/doc/cream-0.38/DEVELOPER.txt
+  /usr/share/doc/cream-0.38/KEYBOARD.txt
+  /usr/share/doc/cream-0.38/PressRelease.txt
+  /usr/share/doc/cream-0.38/README.txt
+  /usr/share/doc/cream-0.38/RELEASE.txt
+  /usr/share/doc/cream-0.38/TODO.txt
+  /usr/share/doc/cream-0.38/WINDOWS.txt
   /usr/share/icons/cream.png
   /usr/share/icons/cream.svg
-  /usr/share/vim/vim70/cream/EasyHtml.vim
-  /usr/share/vim/vim70/cream/EnhancedCommentify.vim
-  /usr/share/vim/vim70/cream/Rndm.vim
-  /usr/share/vim/vim70/cream/addons/cream-colorinvert.vim
-  /usr/share/vim/vim70/cream/addons/cream-convert-hex.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-bugreport.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-ctags.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-fileformat.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-foldfunctions.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-keytest.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-release.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-update.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-vim-abbrev.vim
-  /usr/share/vim/vim70/cream/addons/cream-cream-vim-deformat.vim
-  /usr/share/vim/vim70/cream/addons/cream-dailyread.vim
-  /usr/share/vim/vim70/cream/addons/cream-debinary.vim
-  /usr/share/vim/vim70/cream/addons/cream-email-formatter.vim
-  /usr/share/vim/vim70/cream/addons/cream-email-munge.vim
-  /usr/share/vim/vim70/cream/addons/cream-encrypt-algorithmic.vim
-  /usr/share/vim/vim70/cream/addons/cream-encrypt-h4x0r.vim
-  /usr/share/vim/vim70/cream/addons/cream-encrypt-hexme.vim
-  /usr/share/vim/vim70/cream/addons/cream-encrypt-rot13.vim
-  /usr/share/vim/vim70/cream/addons/cream-helptags.vim
-  /usr/share/vim/vim70/cream/addons/cream-highlight-ctrlchars.vim
-  /usr/share/vim/vim70/cream/addons/cream-highlight-mbyte.vim
-  /usr/share/vim/vim70/cream/addons/cream-ispell.vim
-  /usr/share/vim/vim70/cream/addons/cream-sort.vim
-  /usr/share/vim/vim70/cream/addons/cream-spell-french.vim
-  /usr/share/vim/vim70/cream/addons/cream-stamp-filename.vim
-  /usr/share/vim/vim70/cream/addons/cream-str-invert.vim
-  /usr/share/vim/vim70/cream/addons/cream-syntax2html.vim
-  /usr/share/vim/vim70/cream/addons/cream-table.vim
-  /usr/share/vim/vim70/cream/addons/cream-text2html.vim
-  /usr/share/vim/vim70/cream/addons/cream-timestamp.vim
-  /usr/share/vim/vim70/cream/addons/cream-typingtutor.vim
-  /usr/share/vim/vim70/cream/bitmaps/book.xpm
-  /usr/share/vim/vim70/cream/bitmaps/broken_image.xpm
-  /usr/share/vim/vim70/cream/bitmaps/copy_alt.xpm
-  /usr/share/vim/vim70/cream/bitmaps/cut_alt.xpm
-  /usr/share/vim/vim70/cream/bitmaps/exit.xpm
-  /usr/share/vim/vim70/cream/bitmaps/font.xpm
-  /usr/share/vim/vim70/cream/bitmaps/help.xpm
-  /usr/share/vim/vim70/cream/bitmaps/new.xpm
-  /usr/share/vim/vim70/cream/bitmaps/open.xpm
-  /usr/share/vim/vim70/cream/bitmaps/paste.xpm
-  /usr/share/vim/vim70/cream/bitmaps/print.xpm
-  /usr/share/vim/vim70/cream/bitmaps/redo.xpm
-  /usr/share/vim/vim70/cream/bitmaps/save.xpm
-  /usr/share/vim/vim70/cream/bitmaps/save_all.xpm
-  /usr/share/vim/vim70/cream/bitmaps/save_as.xpm
-  /usr/share/vim/vim70/cream/bitmaps/search.xpm
-  /usr/share/vim/vim70/cream/bitmaps/search_and_replace.xpm
-  /usr/share/vim/vim70/cream/bitmaps/spellcheck.xpm
-  /usr/share/vim/vim70/cream/bitmaps/text_align_center.xpm
-  /usr/share/vim/vim70/cream/bitmaps/text_align_justify.xpm
-  /usr/share/vim/vim70/cream/bitmaps/text_align_left.xpm
-  /usr/share/vim/vim70/cream/bitmaps/text_align_right.xpm
-  /usr/share/vim/vim70/cream/bitmaps/undo.xpm
-  /usr/share/vim/vim70/cream/calendar.vim
-  /usr/share/vim/vim70/cream/cream-abbr-eng.vim
-  /usr/share/vim/vim70/cream/cream-abbr-fre.vim
-  /usr/share/vim/vim70/cream/cream-abbr.vim
-  /usr/share/vim/vim70/cream/cream-addon.vim
-  /usr/share/vim/vim70/cream/cream-ascii.vim
-  /usr/share/vim/vim70/cream/cream-autocmd.vim
-  /usr/share/vim/vim70/cream/cream-behavior.vim
-  /usr/share/vim/vim70/cream/cream-bookmarks.vim
-  /usr/share/vim/vim70/cream/cream-capitalization.vim
-  /usr/share/vim/vim70/cream/cream-colors-blackwhite.vim
-  /usr/share/vim/vim70/cream/cream-colors-chocolateliquor.vim
-  /usr/share/vim/vim70/cream/cream-colors-dawn.vim
-  /usr/share/vim/vim70/cream/cream-colors-default.vim
-  /usr/share/vim/vim70/cream/cream-colors-inkpot.vim
-  /usr/share/vim/vim70/cream/cream-colors-navajo-night.vim
-  /usr/share/vim/vim70/cream/cream-colors-navajo.vim
-  /usr/share/vim/vim70/cream/cream-colors-night.vim
-  /usr/share/vim/vim70/cream/cream-colors-oceandeep.vim
-  /usr/share/vim/vim70/cream/cream-colors-terminal.vim
-  /usr/share/vim/vim70/cream/cream-colors-zenburn.vim
-  /usr/share/vim/vim70/cream/cream-colors.vim
-  /usr/share/vim/vim70/cream/cream-columns.vim
-  /usr/share/vim/vim70/cream/cream-conf.example.vim
-  /usr/share/vim/vim70/cream/cream-devel.vim
-  /usr/share/vim/vim70/cream/cream-expertmode.vim
-  /usr/share/vim/vim70/cream/cream-explorer.vim
-  /usr/share/vim/vim70/cream/cream-filetype.vim
-  /usr/share/vim/vim70/cream/cream-find.vim
-  /usr/share/vim/vim70/cream/cream-gui.vim
-  /usr/share/vim/vim70/cream/cream-iso3166-1.vim
-  /usr/share/vim/vim70/cream/cream-iso639.vim
-  /usr/share/vim/vim70/cream/cream-justify.vim
-  /usr/share/vim/vim70/cream/cream-keys.vim
-  /usr/share/vim/vim70/cream/cream-lib-os.vim
-  /usr/share/vim/vim70/cream/cream-lib-win-tab-buf.vim
-  /usr/share/vim/vim70/cream/cream-lib.vim
-  /usr/share/vim/vim70/cream/cream-loremipsum.vim
-  /usr/share/vim/vim70/cream/cream-macros.vim
-  /usr/share/vim/vim70/cream/cream-menu-developer.vim
-  /usr/share/vim/vim70/cream/cream-menu-edit.vim
-  /usr/share/vim/vim70/cream/cream-menu-file.vim
-  /usr/share/vim/vim70/cream/cream-menu-format.vim
-  /usr/share/vim/vim70/cream/cream-menu-help.vim
-  /usr/share/vim/vim70/cream/cream-menu-insert.vim
-  /usr/share/vim/vim70/cream/cream-menu-mru.vim
-  /usr/share/vim/vim70/cream/cream-menu-popup.vim
-  /usr/share/vim/vim70/cream/cream-menu-settings.vim
-  /usr/share/vim/vim70/cream/cream-menu-toolbar.vim
-  /usr/share/vim/vim70/cream/cream-menu-tools.vim
-  /usr/share/vim/vim70/cream/cream-menu-window-buffer.vim
-  /usr/share/vim/vim70/cream/cream-menu-window.vim
-  /usr/share/vim/vim70/cream/cream-menu.vim
-  /usr/share/vim/vim70/cream/cream-numberlines.vim
-  /usr/share/vim/vim70/cream/cream-playpen.vim
-  /usr/share/vim/vim70/cream/cream-pop.vim
-  /usr/share/vim/vim70/cream/cream-print.vim
-  /usr/share/vim/vim70/cream/cream-replace.vim
-  /usr/share/vim/vim70/cream/cream-replacemulti.vim
-  /usr/share/vim/vim70/cream/cream-server.vim
-  /usr/share/vim/vim70/cream/cream-settings.vim
-  /usr/share/vim/vim70/cream/cream-showinvisibles.vim
-  /usr/share/vim/vim70/cream/cream-spell.vim
-  /usr/share/vim/vim70/cream/cream-statusline.vim
-  /usr/share/vim/vim70/cream/cream-templates.vim
-  /usr/share/vim/vim70/cream/cream.vim
-  /usr/share/vim/vim70/cream/creamrc
-  /usr/share/vim/vim70/cream/docs-html/about.html
-  /usr/share/vim/vim70/cream/docs-html/contributors.html
-  /usr/share/vim/vim70/cream/docs-html/css.php
-  /usr/share/vim/vim70/cream/docs-html/download.html
-  /usr/share/vim/vim70/cream/docs-html/external.gif
-  /usr/share/vim/vim70/cream/docs-html/faq.html
-  /usr/share/vim/vim70/cream/docs-html/favicon.ico
-  /usr/share/vim/vim70/cream/docs-html/featurelist.html
-  /usr/share/vim/vim70/cream/docs-html/features.html
-  /usr/share/vim/vim70/cream/docs-html/home.html
-  /usr/share/vim/vim70/cream/docs-html/index.html
-  /usr/share/vim/vim70/cream/docs-html/installation.html
-  /usr/share/vim/vim70/cream/docs-html/keyboardshortcuts.html
-  /usr/share/vim/vim70/cream/docs-html/screenshot1-thumb.png
-  /usr/share/vim/vim70/cream/docs-html/screenshot1.html
-  /usr/share/vim/vim70/cream/docs-html/screenshot1.png
-  /usr/share/vim/vim70/cream/docs-html/screenshot2-thumb.png
-  /usr/share/vim/vim70/cream/docs-html/screenshot2.html
-  /usr/share/vim/vim70/cream/docs-html/screenshot2.png
-  /usr/share/vim/vim70/cream/docs-html/screenshot3-thumb.png
-  /usr/share/vim/vim70/cream/docs-html/screenshot3.html
-  /usr/share/vim/vim70/cream/docs-html/screenshot3.png
-  /usr/share/vim/vim70/cream/docs-html/statusline-thumb.png
-  /usr/share/vim/vim70/cream/docs-html/statusline.html
-  /usr/share/vim/vim70/cream/docs-html/statusline.png
-  /usr/share/vim/vim70/cream/docs-html/vim.html
-  /usr/share/vim/vim70/cream/docs/CHANGELOG.txt
-  /usr/share/vim/vim70/cream/docs/COPYING.txt
-  /usr/share/vim/vim70/cream/docs/DEVELOPER.txt
-  /usr/share/vim/vim70/cream/docs/KEYBOARD.txt
-  /usr/share/vim/vim70/cream/docs/PressRelease.txt
-  /usr/share/vim/vim70/cream/docs/README.txt
-  /usr/share/vim/vim70/cream/docs/RELEASE.txt
-  /usr/share/vim/vim70/cream/docs/TODO.txt
-  /usr/share/vim/vim70/cream/docs/WINDOWS.txt
-  /usr/share/vim/vim70/cream/filetypes/c.vim
-  /usr/share/vim/vim70/cream/filetypes/html.vim
-  /usr/share/vim/vim70/cream/filetypes/lisp.vim
-  /usr/share/vim/vim70/cream/filetypes/txt.vim
-  /usr/share/vim/vim70/cream/filetypes/vim.vim
-  /usr/share/vim/vim70/cream/genutils.vim
-  /usr/share/vim/vim70/cream/help/EnhancedCommentify.txt
-  /usr/share/vim/vim70/cream/help/opsplorer.txt
-  /usr/share/vim/vim70/cream/lang/menu_chinese_gb.936.vim
-  /usr/share/vim/vim70/cream/lang/menu_en_us.utf-8.vim
-  /usr/share/vim/vim70/cream/lang/menu_fr_fr.latin1.vim
-  /usr/share/vim/vim70/cream/lang/menu_ko.cp949.vim
-  /usr/share/vim/vim70/cream/lang/menu_korean_kr.949.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh.cp936.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh.cp950.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh.gb2312.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh_cn.18030.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh_cn.cp936.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh_cn.gb2312.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh_cn.gbk.vim
-  /usr/share/vim/vim70/cream/lang/menu_zh_cn.utf-8.vim
-  /usr/share/vim/vim70/cream/lang/strings_en_us.utf-8.vim
-  /usr/share/vim/vim70/cream/multvals.vim
-  /usr/share/vim/vim70/cream/opsplorer.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-CA_1.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-CA_2.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-CA_3.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-CA_4.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-GB_1.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-GB_2.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-GB_3.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-GB_4.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-US_1.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-US_2.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-US_3.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s-US_4.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s_1.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s_2.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s_3.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict-eng-s_4.vim
-  /usr/share/vim/vim70/cream/spelldicts/cream-spell-dict.vim
-  /usr/share/vim/vim70/cream/taglist.vim
+  /usr/share/vim/vim71/cream/EasyHtml.vim
+  /usr/share/vim/vim71/cream/EnhancedCommentify.vim
+  /usr/share/vim/vim71/cream/Rndm.vim
+  /usr/share/vim/vim71/cream/addons/cream-colorinvert.vim
+  /usr/share/vim/vim71/cream/addons/cream-convert-hex.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-bugreport.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-ctags.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-fileformat.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-foldfunctions.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-keytest.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-release.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-update.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-vim-abbrev.vim
+  /usr/share/vim/vim71/cream/addons/cream-cream-vim-deformat.vim
+  /usr/share/vim/vim71/cream/addons/cream-dailyread.vim
+  /usr/share/vim/vim71/cream/addons/cream-debinary.vim
+  /usr/share/vim/vim71/cream/addons/cream-email-formatter.vim
+  /usr/share/vim/vim71/cream/addons/cream-email-munge.vim
+  /usr/share/vim/vim71/cream/addons/cream-encrypt-algorithmic.vim
+  /usr/share/vim/vim71/cream/addons/cream-encrypt-h4x0r.vim
+  /usr/share/vim/vim71/cream/addons/cream-encrypt-hexme.vim
+  /usr/share/vim/vim71/cream/addons/cream-encrypt-rot13.vim
+  /usr/share/vim/vim71/cream/addons/cream-helptags.vim
+  /usr/share/vim/vim71/cream/addons/cream-highlight-ctrlchars.vim
+  /usr/share/vim/vim71/cream/addons/cream-highlight-mbyte.vim
+  /usr/share/vim/vim71/cream/addons/cream-ispell.vim
+  /usr/share/vim/vim71/cream/addons/cream-slide-generator.vim
+  /usr/share/vim/vim71/cream/addons/cream-sort.vim
+  /usr/share/vim/vim71/cream/addons/cream-spell-french.vim
+  /usr/share/vim/vim71/cream/addons/cream-stamp-filename.vim
+  /usr/share/vim/vim71/cream/addons/cream-str-invert.vim
+  /usr/share/vim/vim71/cream/addons/cream-syntax2html.vim
+  /usr/share/vim/vim71/cream/addons/cream-table.vim
+  /usr/share/vim/vim71/cream/addons/cream-text2html.vim
+  /usr/share/vim/vim71/cream/addons/cream-timestamp.vim
+  /usr/share/vim/vim71/cream/addons/cream-typingtutor.vim
+  /usr/share/vim/vim71/cream/bitmaps/book.xpm
+  /usr/share/vim/vim71/cream/bitmaps/broken_image.xpm
+  /usr/share/vim/vim71/cream/bitmaps/copy_alt.xpm
+  /usr/share/vim/vim71/cream/bitmaps/cut_alt.xpm
+  /usr/share/vim/vim71/cream/bitmaps/exit.xpm
+  /usr/share/vim/vim71/cream/bitmaps/font.xpm
+  /usr/share/vim/vim71/cream/bitmaps/help.xpm
+  /usr/share/vim/vim71/cream/bitmaps/new.xpm
+  /usr/share/vim/vim71/cream/bitmaps/open.xpm
+  /usr/share/vim/vim71/cream/bitmaps/paste.xpm
+  /usr/share/vim/vim71/cream/bitmaps/print.xpm
+  /usr/share/vim/vim71/cream/bitmaps/redo.xpm
+  /usr/share/vim/vim71/cream/bitmaps/save.xpm
+  /usr/share/vim/vim71/cream/bitmaps/save_all.xpm
+  /usr/share/vim/vim71/cream/bitmaps/save_as.xpm
+  /usr/share/vim/vim71/cream/bitmaps/search.xpm
+  /usr/share/vim/vim71/cream/bitmaps/search_and_replace.xpm
+  /usr/share/vim/vim71/cream/bitmaps/spellcheck.xpm
+  /usr/share/vim/vim71/cream/bitmaps/text_align_center.xpm
+  /usr/share/vim/vim71/cream/bitmaps/text_align_justify.xpm
+  /usr/share/vim/vim71/cream/bitmaps/text_align_left.xpm
+  /usr/share/vim/vim71/cream/bitmaps/text_align_right.xpm
+  /usr/share/vim/vim71/cream/bitmaps/undo.xpm
+  /usr/share/vim/vim71/cream/calendar.vim
+  /usr/share/vim/vim71/cream/cream-abbr-eng.vim
+  /usr/share/vim/vim71/cream/cream-abbr-fre.vim
+  /usr/share/vim/vim71/cream/cream-abbr.vim
+  /usr/share/vim/vim71/cream/cream-addon.vim
+  /usr/share/vim/vim71/cream/cream-ascii.vim
+  /usr/share/vim/vim71/cream/cream-autocmd.vim
+  /usr/share/vim/vim71/cream/cream-behavior.vim
+  /usr/share/vim/vim71/cream/cream-bookmarks.vim
+  /usr/share/vim/vim71/cream/cream-capitalization.vim
+  /usr/share/vim/vim71/cream/cream-colors-blackwhite.vim
+  /usr/share/vim/vim71/cream/cream-colors-chocolateliquor.vim
+  /usr/share/vim/vim71/cream/cream-colors-dawn.vim
+  /usr/share/vim/vim71/cream/cream-colors-default.vim
+  /usr/share/vim/vim71/cream/cream-colors-inkpot.vim
+  /usr/share/vim/vim71/cream/cream-colors-navajo-night.vim
+  /usr/share/vim/vim71/cream/cream-colors-navajo.vim
+  /usr/share/vim/vim71/cream/cream-colors-night.vim
+  /usr/share/vim/vim71/cream/cream-colors-oceandeep.vim
+  /usr/share/vim/vim71/cream/cream-colors-terminal.vim
+  /usr/share/vim/vim71/cream/cream-colors-zenburn.vim
+  /usr/share/vim/vim71/cream/cream-colors.vim
+  /usr/share/vim/vim71/cream/cream-columns.vim
+  /usr/share/vim/vim71/cream/cream-conf.example.vim
+  /usr/share/vim/vim71/cream/cream-devel.vim
+  /usr/share/vim/vim71/cream/cream-expertmode.vim
+  /usr/share/vim/vim71/cream/cream-filetype.vim
+  /usr/share/vim/vim71/cream/cream-find.vim
+  /usr/share/vim/vim71/cream/cream-gui.vim
+  /usr/share/vim/vim71/cream/cream-iso3166-1.vim
+  /usr/share/vim/vim71/cream/cream-iso639.vim
+  /usr/share/vim/vim71/cream/cream-justify.vim
+  /usr/share/vim/vim71/cream/cream-keys.vim
+  /usr/share/vim/vim71/cream/cream-lib-os.vim
+  /usr/share/vim/vim71/cream/cream-lib-win-tab-buf.vim
+  /usr/share/vim/vim71/cream/cream-lib.vim
+  /usr/share/vim/vim71/cream/cream-loremipsum.vim
+  /usr/share/vim/vim71/cream/cream-macros.vim
+  /usr/share/vim/vim71/cream/cream-menu-developer.vim
+  /usr/share/vim/vim71/cream/cream-menu-edit.vim
+  /usr/share/vim/vim71/cream/cream-menu-file.vim
+  /usr/share/vim/vim71/cream/cream-menu-format.vim
+  /usr/share/vim/vim71/cream/cream-menu-help.vim
+  /usr/share/vim/vim71/cream/cream-menu-insert.vim
+  /usr/share/vim/vim71/cream/cream-menu-mru.vim
+  /usr/share/vim/vim71/cream/cream-menu-popup.vim
+  /usr/share/vim/vim71/cream/cream-menu-settings.vim
+  /usr/share/vim/vim71/cream/cream-menu-toolbar.vim
+  /usr/share/vim/vim71/cream/cream-menu-tools.vim
+  /usr/share/vim/vim71/cream/cream-menu-window-buffer.vim
+  /usr/share/vim/vim71/cream/cream-menu-window.vim
+  /usr/share/vim/vim71/cream/cream-menu.vim
+  /usr/share/vim/vim71/cream/cream-numberlines.vim
+  /usr/share/vim/vim71/cream/cream-playpen.vim
+  /usr/share/vim/vim71/cream/cream-pop.vim
+  /usr/share/vim/vim71/cream/cream-print.vim
+  /usr/share/vim/vim71/cream/cream-replace.vim
+  /usr/share/vim/vim71/cream/cream-replacemulti.vim
+  /usr/share/vim/vim71/cream/cream-server.vim
+  /usr/share/vim/vim71/cream/cream-settings.vim
+  /usr/share/vim/vim71/cream/cream-showinvisibles.vim
+  /usr/share/vim/vim71/cream/cream-spell.vim
+  /usr/share/vim/vim71/cream/cream-statusline.vim
+  /usr/share/vim/vim71/cream/cream-templates.vim
+  /usr/share/vim/vim71/cream/cream.vim
+  /usr/share/vim/vim71/cream/creamrc
+  /usr/share/vim/vim71/cream/docs-html/about.html
+  /usr/share/vim/vim71/cream/docs-html/contributors.html
+  /usr/share/vim/vim71/cream/docs-html/css.php
+  /usr/share/vim/vim71/cream/docs-html/download.html
+  /usr/share/vim/vim71/cream/docs-html/external.gif
+  /usr/share/vim/vim71/cream/docs-html/faq.html
+  /usr/share/vim/vim71/cream/docs-html/favicon.ico
+  /usr/share/vim/vim71/cream/docs-html/featurelist.html
+  /usr/share/vim/vim71/cream/docs-html/features.html
+  /usr/share/vim/vim71/cream/docs-html/home.html
+  /usr/share/vim/vim71/cream/docs-html/index.html
+  /usr/share/vim/vim71/cream/docs-html/installation.html
+  /usr/share/vim/vim71/cream/docs-html/keyboardshortcuts.html
+  /usr/share/vim/vim71/cream/docs-html/screenshot1-thumb.png
+  /usr/share/vim/vim71/cream/docs-html/screenshot1.html
+  /usr/share/vim/vim71/cream/docs-html/screenshot1.png
+  /usr/share/vim/vim71/cream/docs-html/screenshot2-thumb.png
+  /usr/share/vim/vim71/cream/docs-html/screenshot2.html
+  /usr/share/vim/vim71/cream/docs-html/screenshot2.png
+  /usr/share/vim/vim71/cream/docs-html/screenshot3-thumb.png
+  /usr/share/vim/vim71/cream/docs-html/screenshot3.html
+  /usr/share/vim/vim71/cream/docs-html/screenshot3.png
+  /usr/share/vim/vim71/cream/docs-html/statusline-orig.png
+  /usr/share/vim/vim71/cream/docs-html/statusline-thumb.png
+  /usr/share/vim/vim71/cream/docs-html/statusline.html
+  /usr/share/vim/vim71/cream/docs-html/statusline.png
+  /usr/share/vim/vim71/cream/docs-html/vim.html
+  /usr/share/vim/vim71/cream/docs/CHANGELOG.txt
+  /usr/share/vim/vim71/cream/docs/COPYING.txt
+  /usr/share/vim/vim71/cream/docs/DEVELOPER.txt
+  /usr/share/vim/vim71/cream/docs/KEYBOARD.txt
+  /usr/share/vim/vim71/cream/docs/PressRelease.txt
+  /usr/share/vim/vim71/cream/docs/README.txt
+  /usr/share/vim/vim71/cream/docs/RELEASE.txt
+  /usr/share/vim/vim71/cream/docs/TODO.txt
+  /usr/share/vim/vim71/cream/docs/WINDOWS.txt
+  /usr/share/vim/vim71/cream/filetypes/c.vim
+  /usr/share/vim/vim71/cream/filetypes/html.vim
+  /usr/share/vim/vim71/cream/filetypes/lisp.vim
+  /usr/share/vim/vim71/cream/filetypes/txt.vim
+  /usr/share/vim/vim71/cream/filetypes/vim.vim
+  /usr/share/vim/vim71/cream/genutils.vim
+  /usr/share/vim/vim71/cream/help/EnhancedCommentify.txt
+  /usr/share/vim/vim71/cream/help/opsplorer.txt
+  /usr/share/vim/vim71/cream/lang/menu_chinese_gb.936.vim
+  /usr/share/vim/vim71/cream/lang/menu_en_us.utf-8.vim
+  /usr/share/vim/vim71/cream/lang/menu_fr_fr.latin1.vim
+  /usr/share/vim/vim71/cream/lang/menu_ko.cp949.vim
+  /usr/share/vim/vim71/cream/lang/menu_korean_kr.949.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh.cp936.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh.cp950.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh.gb2312.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh_cn.18030.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh_cn.cp936.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh_cn.gb2312.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh_cn.gbk.vim
+  /usr/share/vim/vim71/cream/lang/menu_zh_cn.utf-8.vim
+  /usr/share/vim/vim71/cream/lang/strings_en_us.utf-8.vim
+  /usr/share/vim/vim71/cream/multvals.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-CA_1.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-CA_2.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-CA_3.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-CA_4.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-GB_1.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-GB_2.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-GB_3.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-GB_4.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-US_1.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-US_2.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-US_3.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s-US_4.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s_1.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s_2.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s_3.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict-eng-s_4.vim
+  /usr/share/vim/vim71/cream/spelldicts/cream-spell-dict.vim
+  /usr/share/vim/vim71/cream/taglist.vim
 
 ------------------
 
 Port Notes:
+
+----- version 0.38-1 -----
+Version bump, built for Vim 7.1.
 
 ----- version 0.37-1 -----
 Version bump.
