--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Runtime requirements:
   gvim-7.2.x
 
 Build requirements:
-  cygport-0.3.12-1
+  cygport-0.9.9-1
   vim-7.2.x
 
 Canonical website:
@@ -23,240 +23,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack cream-0.41-X-src.tar.bz2
+  unpack cream-0.42-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./cream-0.41-X.cygport all
+  cygport ./cream-0.42-X.cygport all
 
 This will create:
-  /usr/src/cream-0.41-X-src.tar.bz2
-  /usr/src/cream-0.41-X.tar.bz2
+  /usr/src/cream-0.42-X-src.tar.bz2
+  /usr/src/cream-0.42-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /etc/postinstall/cream.sh
-  /usr/bin/cream
-  /usr/share/applications/cream.desktop
-  /usr/share/doc/cream-0.41/CHANGELOG.txt
-  /usr/share/doc/cream-0.41/COPYING.txt
-  /usr/share/doc/cream-0.41/DEVELOPER.txt
-  /usr/share/doc/cream-0.41/KEYBOARD.txt
-  /usr/share/doc/cream-0.41/PressRelease.txt
-  /usr/share/doc/cream-0.41/README.txt
-  /usr/share/doc/cream-0.41/RELEASE.txt
-  /usr/share/doc/cream-0.41/TODO.txt
-  /usr/share/doc/cream-0.41/WINDOWS.txt
-  /usr/share/icons/cream.png
-  /usr/share/icons/cream.svg
-  /usr/share/vim/vim72/cream/EnhancedCommentify.vim
-  /usr/share/vim/vim72/cream/Rndm.vim
-  /usr/share/vim/vim72/cream/addons/cream-colorinvert.vim
-  /usr/share/vim/vim72/cream/addons/cream-convert-hex.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-bugreport.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-ctags.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-fileformat.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-foldfunctions.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-keytest.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-release.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-update.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-vim-abbrev.vim
-  /usr/share/vim/vim72/cream/addons/cream-cream-vim-deformat.vim
-  /usr/share/vim/vim72/cream/addons/cream-dailyread.vim
-  /usr/share/vim/vim72/cream/addons/cream-debinary.vim
-  /usr/share/vim/vim72/cream/addons/cream-email-formatter.vim
-  /usr/share/vim/vim72/cream/addons/cream-email-munge.vim
-  /usr/share/vim/vim72/cream/addons/cream-encrypt-algorithmic.vim
-  /usr/share/vim/vim72/cream/addons/cream-encrypt-gpg.vim
-  /usr/share/vim/vim72/cream/addons/cream-encrypt-h4x0r.vim
-  /usr/share/vim/vim72/cream/addons/cream-encrypt-hexme.vim
-  /usr/share/vim/vim72/cream/addons/cream-encrypt-rot13.vim
-  /usr/share/vim/vim72/cream/addons/cream-helptags.vim
-  /usr/share/vim/vim72/cream/addons/cream-highlight-ctrlchars.vim
-  /usr/share/vim/vim72/cream/addons/cream-highlight-mbyte.vim
-  /usr/share/vim/vim72/cream/addons/cream-ispell.vim
-  /usr/share/vim/vim72/cream/addons/cream-slide-generator.vim
-  /usr/share/vim/vim72/cream/addons/cream-sort.vim
-  /usr/share/vim/vim72/cream/addons/cream-spell-french.vim
-  /usr/share/vim/vim72/cream/addons/cream-stamp-filename.vim
-  /usr/share/vim/vim72/cream/addons/cream-str-invert.vim
-  /usr/share/vim/vim72/cream/addons/cream-syntax2html.vim
-  /usr/share/vim/vim72/cream/addons/cream-table.vim
-  /usr/share/vim/vim72/cream/addons/cream-text2html.vim
-  /usr/share/vim/vim72/cream/addons/cream-timestamp.vim
-  /usr/share/vim/vim72/cream/addons/cream-typingtutor.vim
-  /usr/share/vim/vim72/cream/bitmaps/book.xpm
-  /usr/share/vim/vim72/cream/bitmaps/broken_image.xpm
-  /usr/share/vim/vim72/cream/bitmaps/copy_alt.xpm
-  /usr/share/vim/vim72/cream/bitmaps/cut_alt.xpm
-  /usr/share/vim/vim72/cream/bitmaps/exit.xpm
-  /usr/share/vim/vim72/cream/bitmaps/font.xpm
-  /usr/share/vim/vim72/cream/bitmaps/help.xpm
-  /usr/share/vim/vim72/cream/bitmaps/new.xpm
-  /usr/share/vim/vim72/cream/bitmaps/open.xpm
-  /usr/share/vim/vim72/cream/bitmaps/paste.xpm
-  /usr/share/vim/vim72/cream/bitmaps/print.xpm
-  /usr/share/vim/vim72/cream/bitmaps/redo.xpm
-  /usr/share/vim/vim72/cream/bitmaps/save.xpm
-  /usr/share/vim/vim72/cream/bitmaps/save_all.xpm
-  /usr/share/vim/vim72/cream/bitmaps/save_as.xpm
-  /usr/share/vim/vim72/cream/bitmaps/search.xpm
-  /usr/share/vim/vim72/cream/bitmaps/search_and_replace.xpm
-  /usr/share/vim/vim72/cream/bitmaps/spellcheck.xpm
-  /usr/share/vim/vim72/cream/bitmaps/text_align_center.xpm
-  /usr/share/vim/vim72/cream/bitmaps/text_align_justify.xpm
-  /usr/share/vim/vim72/cream/bitmaps/text_align_left.xpm
-  /usr/share/vim/vim72/cream/bitmaps/text_align_right.xpm
-  /usr/share/vim/vim72/cream/bitmaps/undo.xpm
-  /usr/share/vim/vim72/cream/calendar.vim
-  /usr/share/vim/vim72/cream/cream-abbr-eng.vim
-  /usr/share/vim/vim72/cream/cream-abbr-fre.vim
-  /usr/share/vim/vim72/cream/cream-abbr.vim
-  /usr/share/vim/vim72/cream/cream-addon.vim
-  /usr/share/vim/vim72/cream/cream-ascii.vim
-  /usr/share/vim/vim72/cream/cream-autocmd.vim
-  /usr/share/vim/vim72/cream/cream-behavior.vim
-  /usr/share/vim/vim72/cream/cream-bookmarks.vim
-  /usr/share/vim/vim72/cream/cream-capitalization.vim
-  /usr/share/vim/vim72/cream/cream-colors-blackwhite.vim
-  /usr/share/vim/vim72/cream/cream-colors-chocolateliquor.vim
-  /usr/share/vim/vim72/cream/cream-colors-dawn.vim
-  /usr/share/vim/vim72/cream/cream-colors-default.vim
-  /usr/share/vim/vim72/cream/cream-colors-inkpot.vim
-  /usr/share/vim/vim72/cream/cream-colors-matrix.vim
-  /usr/share/vim/vim72/cream/cream-colors-navajo-night.vim
-  /usr/share/vim/vim72/cream/cream-colors-navajo.vim
-  /usr/share/vim/vim72/cream/cream-colors-night.vim
-  /usr/share/vim/vim72/cream/cream-colors-oceandeep.vim
-  /usr/share/vim/vim72/cream/cream-colors-terminal.vim
-  /usr/share/vim/vim72/cream/cream-colors-zenburn.vim
-  /usr/share/vim/vim72/cream/cream-colors.vim
-  /usr/share/vim/vim72/cream/cream-columns.vim
-  /usr/share/vim/vim72/cream/cream-conf.example.vim
-  /usr/share/vim/vim72/cream/cream-devel.vim
-  /usr/share/vim/vim72/cream/cream-expertmode.vim
-  /usr/share/vim/vim72/cream/cream-filetype.vim
-  /usr/share/vim/vim72/cream/cream-find.vim
-  /usr/share/vim/vim72/cream/cream-gui.vim
-  /usr/share/vim/vim72/cream/cream-iso3166-1.vim
-  /usr/share/vim/vim72/cream/cream-iso639.vim
-  /usr/share/vim/vim72/cream/cream-justify.vim
-  /usr/share/vim/vim72/cream/cream-keys.vim
-  /usr/share/vim/vim72/cream/cream-lib-os.vim
-  /usr/share/vim/vim72/cream/cream-lib-win-tab-buf.vim
-  /usr/share/vim/vim72/cream/cream-lib.vim
-  /usr/share/vim/vim72/cream/cream-loremipsum.vim
-  /usr/share/vim/vim72/cream/cream-macros.vim
-  /usr/share/vim/vim72/cream/cream-menu-developer.vim
-  /usr/share/vim/vim72/cream/cream-menu-edit.vim
-  /usr/share/vim/vim72/cream/cream-menu-file.vim
-  /usr/share/vim/vim72/cream/cream-menu-format.vim
-  /usr/share/vim/vim72/cream/cream-menu-help.vim
-  /usr/share/vim/vim72/cream/cream-menu-insert.vim
-  /usr/share/vim/vim72/cream/cream-menu-mru.vim
-  /usr/share/vim/vim72/cream/cream-menu-popup.vim
-  /usr/share/vim/vim72/cream/cream-menu-settings.vim
-  /usr/share/vim/vim72/cream/cream-menu-toolbar.vim
-  /usr/share/vim/vim72/cream/cream-menu-tools.vim
-  /usr/share/vim/vim72/cream/cream-menu-window-buffer.vim
-  /usr/share/vim/vim72/cream/cream-menu-window.vim
-  /usr/share/vim/vim72/cream/cream-menu.vim
-  /usr/share/vim/vim72/cream/cream-numberlines.vim
-  /usr/share/vim/vim72/cream/cream-playpen.vim
-  /usr/share/vim/vim72/cream/cream-pop.vim
-  /usr/share/vim/vim72/cream/cream-print.vim
-  /usr/share/vim/vim72/cream/cream-replace.vim
-  /usr/share/vim/vim72/cream/cream-replacemulti.vim
-  /usr/share/vim/vim72/cream/cream-server.vim
-  /usr/share/vim/vim72/cream/cream-settings.vim
-  /usr/share/vim/vim72/cream/cream-showinvisibles.vim
-  /usr/share/vim/vim72/cream/cream-spell.vim
-  /usr/share/vim/vim72/cream/cream-statusline.vim
-  /usr/share/vim/vim72/cream/cream-templates.vim
-  /usr/share/vim/vim72/cream/cream.vim
-  /usr/share/vim/vim72/cream/creamrc
-  /usr/share/vim/vim72/cream/docs-html/about.html
-  /usr/share/vim/vim72/cream/docs-html/contributors.html
-  /usr/share/vim/vim72/cream/docs-html/css.php
-  /usr/share/vim/vim72/cream/docs-html/download.html
-  /usr/share/vim/vim72/cream/docs-html/external.gif
-  /usr/share/vim/vim72/cream/docs-html/faq.html
-  /usr/share/vim/vim72/cream/docs-html/favicon.ico
-  /usr/share/vim/vim72/cream/docs-html/featurelist.html
-  /usr/share/vim/vim72/cream/docs-html/features.html
-  /usr/share/vim/vim72/cream/docs-html/home.html
-  /usr/share/vim/vim72/cream/docs-html/index.html
-  /usr/share/vim/vim72/cream/docs-html/installation.html
-  /usr/share/vim/vim72/cream/docs-html/keyboardshortcuts.html
-  /usr/share/vim/vim72/cream/docs-html/screenshot1-thumb.png
-  /usr/share/vim/vim72/cream/docs-html/screenshot1.html
-  /usr/share/vim/vim72/cream/docs-html/screenshot1.png
-  /usr/share/vim/vim72/cream/docs-html/screenshot2-thumb.png
-  /usr/share/vim/vim72/cream/docs-html/screenshot2.html
-  /usr/share/vim/vim72/cream/docs-html/screenshot2.png
-  /usr/share/vim/vim72/cream/docs-html/screenshot3-thumb.png
-  /usr/share/vim/vim72/cream/docs-html/screenshot3.html
-  /usr/share/vim/vim72/cream/docs-html/screenshot3.png
-  /usr/share/vim/vim72/cream/docs-html/statusline-orig.png
-  /usr/share/vim/vim72/cream/docs-html/statusline-thumb.png
-  /usr/share/vim/vim72/cream/docs-html/statusline.html
-  /usr/share/vim/vim72/cream/docs-html/statusline.png
-  /usr/share/vim/vim72/cream/docs-html/vim.html
-  /usr/share/vim/vim72/cream/docs/CHANGELOG.txt
-  /usr/share/vim/vim72/cream/docs/COPYING.txt
-  /usr/share/vim/vim72/cream/docs/DEVELOPER.txt
-  /usr/share/vim/vim72/cream/docs/KEYBOARD.txt
-  /usr/share/vim/vim72/cream/docs/PressRelease.txt
-  /usr/share/vim/vim72/cream/docs/README.txt
-  /usr/share/vim/vim72/cream/docs/RELEASE.txt
-  /usr/share/vim/vim72/cream/docs/TODO.txt
-  /usr/share/vim/vim72/cream/docs/WINDOWS.txt
-  /usr/share/vim/vim72/cream/filetypes/c.vim
-  /usr/share/vim/vim72/cream/filetypes/html.vim
-  /usr/share/vim/vim72/cream/filetypes/lisp.vim
-  /usr/share/vim/vim72/cream/filetypes/txt.vim
-  /usr/share/vim/vim72/cream/filetypes/vim.vim
-  /usr/share/vim/vim72/cream/genutils.vim
-  /usr/share/vim/vim72/cream/help/EnhancedCommentify.txt
-  /usr/share/vim/vim72/cream/multvals.vim
-  /usr/share/vim/vim72/cream/securemodelines.vim
-  /usr/share/vim/vim72/cream/taglist.vim
-
-------------------
-
 Port Notes:
 
------ version 0.41-2 -----
-Rebuilt for vim-7.2.
-
------ version 0.41-1 -----
-Version bump.
-
------ version 0.40-1 -----
-Version bump.
-
------ version 0.39-1 -----
-Version bump.
-
------ version 0.38-1 -----
-Version bump, built for Vim 7.1.
-
------ version 0.37-1 -----
-Version bump.
-
------ version 0.36-1 -----
-Version bump for Vim 7.0.
-
------ version 0.35-1 -----
-Version bump.
-
------ version 0.34-1 -----
-Version bump.
-
------ version 0.33.1-1 -----
-Initial release for Cygwin.
+----- version 0.42-1 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
